fix caption width on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -369,8 +369,8 @@
             margin-bottom: 0.25rem;
         }
 
-        .grid-1 > .project-content > p.caption {
-            max-width: 100%;
+        .project-content > p.caption {
+            max-width: 100% !important;
         }
 
         .position {
